rm all instances of double word repetition

--- a/appendix.tex
+++ b/appendix.tex
@@ -160,7 +160,7 @@ For a more broad development of this work, \citep{vapnik-nature2000} is recommen
 Here we present a brief comment on the consistency of the training error with respect to the prediction error and give example bounds for classification learners.
 
 
-Vapnik-Chervonenkis discuss a theoretical framework in which the dimension of a class of approximating functions is a quantity that that can be constructed from the data.
+Vapnik-Chervonenkis discuss a theoretical framework in which the dimension of a class of approximating functions is a quantity that can be constructed from the data.
 This allows us to have analytical estimates on the distance between the empirical and generalization errors.
 This is done for a number of known Machine Learning algorithms and the theory also provides methods to calculate these dimensions in a constructive way and for a broad class of functions.
 For cases in VC dimensions can not be calculated, authors propose sampling or experimental methods to bound it.
