--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -759,7 +759,7 @@ This booster was first introduced by Friedman, J., and the full details of the w
 
 \subsection{Notes on Gradient Tree Boosting}\label{subsection:boosting_other_notes}
 
-Given that each base learner has its own own parameter $\theta$  and its weight $\gamma$ in the booster's loss function, take
+Given that each base learner has its own parameter $\theta$  and its weight $\gamma$ in the booster's loss function, take
 
 $$\Gamma = \{ (\gamma_m\,\theta_m) \}_{m=1}^M$$
 
