--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -41,7 +41,7 @@ This attracted scientists from multiple disciplines:
 sociologists, epidemiologists, physicists, transportation and telecommunication experts found in these datasets a clear opportunity to bring their analyses to an unprecedented scale while retaining a high level of detail on each individual.
 Thanks to the growing availability of datasets, collaborations between academic research groups and network operators based on the analysis of real-world mobile traffic have been flourishing.
 A significant example is the Data for Development Challenges by Orange \citep{d4d} in which CDRs from the telecommunication operator was provided.
-This let let international research laboratories compete under an innovation challenge whose objective is to contribute to social welfare.
+This let international research laboratories compete under an innovation challenge whose objective is to contribute to social welfare.
 
 In CDR analysis one of the main research subjects is mobility analysis, where calls can be located by means of knowing cellphone tower geolocalization and by then matching calls to one of these points.
 This provides fine granularity projections of users trajectories and in this way users have been found to show a strong regularity in their movement patterns, both in space and time, as described in \citep{gonzalez2008understanding}.
