--- a/ch_results.tex
+++ b/ch_results.tex
@@ -184,7 +184,7 @@ These split values were characterizing segments of heavy users, that is users th
 
 % This result makes does not strike as wild as
 % Still this result does not imply that all split all users
- % It seems that a big area as a result of their their mobile phone usage and as such, this attribute might indicative of past migrations.
+ % It seems that a big area as a result of their mobile phone usage and as such, this attribute might indicative of past migrations.
 
 
 Here we must note however, that both best-fit trees result in a low $Accuracy$ scores of $43.2\%$,and $57.9\%$ respectively.
