add clearpage for fullpage drawings and fix double split align

--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -190,7 +190,9 @@ Under this setup, the algorithm ran in approximately 15 seconds.
 \cref{fig:decision_tree_actual_problem} shows a partial representation of the actual decision tree grown on \cref{target2}.
 This allows us to see how the algorithm selects better features at low-level nodes, versus the deeper splits.
 
-\bigskip
+% \bigskip
+
+\clearpage
 
 \begin{sidewaysfigure}[H]
     \centering
@@ -201,7 +203,7 @@ This allows us to see how the algorithm selects better features at low-level nod
     \label{fig:decision_tree_actual_problem}
 \end{sidewaysfigure}
 
-\clearpage
+
 
 %\begin{figure*}[tb]
 %\centering
@@ -232,6 +234,7 @@ Still, this is considered a very poor model for supervised learning.
 The figure for this model is shown in \cref{fig:decision_tree_actual_problem2}.
 
 % \bigskip
+\clearpage
 
 \begin{sidewaysfigure}[H]
     \centering
@@ -243,7 +246,7 @@ The figure for this model is shown in \cref{fig:decision_tree_actual_problem2}.
 \end{sidewaysfigure}
 
 
-\clearpage
+% \clearpage
 
 The importance of the mobility diameter becomes clearer in \cref{fig:decision_tree_actual_problem2}.
 Once again the learner selects this attribute as the first split in the data, and this time with balanced samples.
